Added m1 build workaround, made gradlew executable

--- a/RapidReact/build.gradle
+++ b/RapidReact/build.gradle
@@ -47,9 +47,12 @@ wpi.java.debugJni = false
 // Set this to true to enable desktop support.
 def includeDesktopSupport = true
 
+def desktopPlatform = System.getProperty("os.arch") == "aarch64" ? "osxx86-64" : wpi.platforms.desktop
+
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
+
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
@@ -59,15 +62,15 @@ dependencies {
     roborioRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.roborio)
     roborioRelease wpi.java.vendor.jniRelease(wpi.platforms.roborio)
 
-    nativeDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.desktop)
-    nativeDebug wpi.java.vendor.jniDebug(wpi.platforms.desktop)
+    nativeDebug wpi.java.deps.wpilibJniDebug(desktopPlatform)
+    nativeDebug wpi.java.vendor.jniDebug(desktopPlatform)
     simulationDebug wpi.sim.enableDebug()
 
-    nativeRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.desktop)
-    nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
-    simulationRelease wpi.sim.enableRelease()
+    nativeRelease wpi.java.deps.wpilibJniRelease(desktopPlatform)
+    nativeRelease wpi.java.vendor.jniRelease(desktopPlatform)
 
     testImplementation 'junit:junit:4.12'
+
 }
 
 // Simulation configuration (e.g. environment variables).
