logger, github actions

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,3 +30,9 @@ jobs:
       working-directory: ./RapidReact
       with:
         arguments: build
+    - name: Test with Simulator
+      uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
+      working-directory: ./RapidReact
+      with:
+        arguments: simulateJava
+
