--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,11 +28,13 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
       working-directory: ./RapidReact
+      run:
       with:
         arguments: build
     - name: Test with Simulator
       uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
       working-directory: ./RapidReact
+      run:
       with:
         arguments: simulateJava
 
