--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,3 +36,9 @@ jobs:
       with:
         arguments: build
         build-root-directory: ./BucketOfTesting
+    - name: Test with Simulator
+      uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
+      with:
+        arguments: simulateJava
+        build-root-directory: ./RapidReact
+
