make default value put

--- a/RapidReact/build.gradle
+++ b/RapidReact/build.gradle
@@ -83,6 +83,10 @@ jar {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
+repositories {
+    mavenCentral()
+}
+
 // Configure jar and deploy tasks
 deployArtifact.jarTask = jar
 wpi.java.configureExecutableTasks(jar)
