--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,9 @@ bin/
 
 # Simulation GUI and other tools window save file
 *-window.json
+
+# some no-sync icloud ignores
+RapidReact/bin.nosync/
+RapidReact/build.nosync/
+RapidReact/bin
+RapidReact/build
