Updated junior config

--- a/.gitignore
+++ b/.gitignore
@@ -166,5 +166,10 @@ RapidReact/bin.nosync/
 RapidReact/build.nosync/
 RapidReact/bin
 RapidReact/build
-
 RapidReact/out
+
+BucketOfTesting/bin.nosync/
+BucketOfTesting/build.nosync/
+BucketOfTesting/bin
+BucketOfTesting/build
+BucketOfTesting/out
