--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,7 @@ BucketOfTesting/build.nosync/
 BucketOfTesting/bin
 BucketOfTesting/build
 BucketOfTesting/out
+
+/.idea/
+/RapidReact/.idea/
+/BucketOfTesting/.idea/
